syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "AutoReservation.Service.Grpc";

package AutoReservation;

service AutoService {
	rpc GetAllCars(google.protobuf.Empty) returns (GetAllCarsResponse);
	rpc GetCar(GetCarRequest) returns (CarDto);
	rpc InsertCar(CarDto) returns (CarDto);
	rpc UpdateCar(CarDto) returns (google.protobuf.Empty);
	rpc DeleteCar(CarDto) returns (google.protobuf.Empty);
}

message GetAllCarsResponse{
	repeated CarDto data=1;
}

message GetCarRequest {
	int32 id_filter = 1;
}

message CarDto {
	//PrimaryKey
	int32 id = 1;
	string make = 2;
	int32 daily_rate = 3;
	bytes row_version = 4;
	CarClass car_class = 5;
	int32 base_rate = 6;
}

enum CarClass {
	LUXURYCLASS = 0;
	MIDCLASS = 1;
	STANDARD = 2;
}
